--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.11.1",
+    "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-button": "^0.8.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-social-login-buttons": "^4.1.1",
+    "sonner": "^2.0.6",
     "zod": "^3.25.75"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
