--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.3",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
