--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
+    "lodash": "^4.17.21",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-button": "^0.8.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "react-social-login-buttons": "^4.1.1",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.6",
     "zod": "^3.25.75"
   },
@@ -34,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
