--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.11.1",
+    "@prisma/client": "^6.12.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
@@ -33,7 +33,8 @@
     "react-social-login-buttons": "^4.1.1",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.6",
-    "zod": "^3.25.75"
+    "zod": "^3.25.75",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -45,7 +46,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "prisma": "^6.11.1",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
